--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^2.0.0",
+    "@nuxtjs/svg": "^0.4.0",
+    "@vueuse/nuxt": "^9.6.0",
     "nuxt": "3.0.0",
     "sass": "^1.56.1",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "@vueuse/core": "^9.6.0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
